static/plugin_framework/theme.css
/* ... */
.button-green-grad {
  display: inline-block;
  line-height: 36px;
  height: 36px;
  margin-left: 16px;
  padding: 0 16px;
  color: #fff;
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #489615;
  background-image: -moz-linear-gradient(#84c63c, #489615);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#84c63c), to(#489615));
  background-image: -o-linear-gradient(#84c63c, #489615);
  background-image: -ms-linear-gradient(#84c63c, #489615);
}
.button-green-grad:hover {
  -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  -o-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  -ms-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}
.button-yellow-grad {
  display: inline-block;
  line-height: 36px;
  height: 36px;
  margin-left: 16px;
  padding: 0 16px;
  color: #fff;
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #efad1f;
  background-image: -moz-linear-gradient(#ffd272, #efad1f);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffd272), to(#efad1f));
  background-image: -o-linear-gradient(#ffd272, #efad1f);
  background-image: -ms-linear-gradient(#ffd272, #efad1f);
}
.button-yellow-grad:hover {
  -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  -o-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  -ms-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}
/* a circular button with white border */
.red-sticker {
  background-color: #b10808;
  color: #fff;
  display: inline-block;
  width: 24px;
  height: 24px;
  line-height: 24px;
  padding: 0;
  text-align: center;
  -moz-border-radius: 16px 16px 16px 16px;
  -webkit-border-radius: 16px 16px 16px 16px;
  -o-border-radius: 16px 16px 16px 16px;
  -ms-border-radius: 16px 16px 16px 16px;
  border-radius: 16px 16px 16px 16px;
  font-weight: bold;
  -moz-border-radius: 16px 16px 16px 16px;
  -webkit-border-radius: 16px 16px 16px 16px;
  -o-border-radius: 16px 16px 16px 16px;
  -ms-border-radius: 16px 16px 16px 16px;
  border-radius: 16px 16px 16px 16px;
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}
.red-sticker:hover {
  -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
  -o-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
  -ms-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}
/* icon-fonts **************/
.icon-only {
  display: inline-block;
  /* Fix for webkit clickability issue */

}
.icon-only .accessible {
  position: absolute;
  top: -9999px;
  left: -9999px;
}
/* TODO: hide from screen readers: <span aria-hidden="true" data-icon="S"></span> */
.icon-gear:before {
  content: 'S';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-profile:before {
  content: 'U';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-logout:before {
  content: 'X';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-image:before {
  content: 'I';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-cloud:before {
  content: 'C';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-folder:before {
  content: 'F';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-archive:before {
  content: 'Z';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-move:before {
  content: 'M';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-logout:before {
  content: 'X';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-html:before {
  content: 'H';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-a:before {
  content: 'T';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-terminal:before {
  content: '_';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-paperclip:before {
  content: 'A';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-indent:before {
  content: 'n';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-outdent:before {
  content: 'o';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-ul:before {
  content: 'p';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-ol:before {
  content: 'q';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-lock:before {
  content: 'x';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-page:before {
  content: 'a';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-plus-circle:before {
  content: '+';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-close-circle:before {
  content: 'x';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-scale:before {
  content: '&';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-back-circle:before {
  content: '(';
  font-family: Websymbols;
  padding-right: 8px;
}
.icon-next-circle:before {
  content: ')';
  font-family: Websymbols;
  padding-right: 8px;
}
/* ... */

